Fix text align

--- a/web/assets/scss/_layout.scss
+++ b/web/assets/scss/_layout.scss
@@ -600,6 +600,7 @@ padding-right: 0.5rem !important;
 
 button {
   cursor: pointer;
+  text-align: left;
 }
 
 
